# rust-web-server

./: Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.circleci/: config.yml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20230113052042_create_subscription_tokens_table.sql  20230125052859_seed_user.sql  20230128070811_create_idempotency_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs
