[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust-web-server"

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.152", features = ["derive"]}
config = "0.13.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7.2"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4.1.2"
unicode-segmentation = "1"
claim = "0.5"
validator = "0.16"
fake = "~2.5"
quickcheck = "1.0.3" 
quickcheck_macros = "1.0.0"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls", "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate", 
    "offline"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies] 
once_cell = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.9"